apps/gateway/manifests/envoy-gateway.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: gateway
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
    cert-manager.io/cluster-issuer: cloudflare
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.77.32
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      hostname: "*.mgmt.sholdee.net"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: mgmt-wildcard
    - name: unifi-inform
      protocol: TCP
      port: 8080
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: unifi
        kinds:
          - kind: TCPRoute
    - name: mqtt-proxy
      hostname: "*.mgmt.sholdee.net"
      protocol: TLS
      port: 8883
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: hivemq
        kinds:
          - kind: TCPRoute
      tls:
        mode: Terminate
        certificateRefs:
          - name: mgmt-wildcard
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-https-redirect
  namespace: gateway
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy-gateway
  namespace: gateway
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
  connection:
    bufferLimit: 128Ki
  tcpKeepalive:
    idleTime: 60s
    interval: 10s
    probes: 3
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
