apps/gateway/manifests/guest-gateway.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: guest-gateway
  namespace: gateway
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
    cert-manager.io/cluster-issuer: cloudflare
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.77.33
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: unifi-guest
      hostname: "*.guest.sholdee.net"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: guest-wildcard
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guest-https-redirect
  namespace: gateway
spec:
  parentRefs:
    - name: guest-gateway
      namespace: gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
