apps/gateway/manifests/mgmt-gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mgmt-gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: 192.168.77.30
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    hostname: "*.mgmt.sholdee.net"
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: mgmt-wildcard
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mgmt-https-redirect
  namespace: gateway
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: gateway
    sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
